--- a/geopost/geopost/Views/UmbracoIdentityAccount/Register.cshtml
+++ b/geopost/geopost/Views/UmbracoIdentityAccount/Register.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Register";
 }
 
-<div class="col-md-3 col-sm-4 col-xs-12 sign-in-wrapper">
+<div class="col-md-6 col-sm-6 col-xs-12 sign-in-wrapper">
     <div class="col-xs-12">
         @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", @id = "register-form", role = "form" }))
         {
@@ -43,12 +43,12 @@
             </div>
             <div class="form-group">
                 <div class="col-md-10">
-                    <input type="submit" value="Register" class="btn btn-default sign-in-button" />
+                    <input type="submit" value="Register" class="btn btn-default sign-in-button" id="UserRegister"/>
                 </div>
             </div>
             <p>
                 Or go back to&nbsp;
-                @Html.ActionLink("Login", "Login", "Account", null, new { @class = "btn btn-default sign-in-button sign-in-button-post" })
+                @Html.ActionLink("Login", "Login", "Account", null, new { @class = "btn btn-default sign-in-button sign-in-button-post"})
             </p>
         }
     </div>
